--- a/src/components/Slider/slider.css
+++ b/src/components/Slider/slider.css
@@ -4,6 +4,7 @@
   backdrop-filter: blur(20px);
   border: 2px solid white;
   padding: 25px 16px;
+  display: none;
 }
 
 .swiper-button-prev.swiper-button-disabled,
@@ -14,4 +15,12 @@
 .swiper-button-prev::after,
 .swiper-button-next::after {
   color: white !important;
+}
+
+@media only screen and (min-width: 640px) {
+  .swiper-button-next,
+  .swiper-rtl,
+  .swiper-button-prev {
+    display: flex;
+  }
 }
